@@ -474,15 +474,25 @@ EBUILD texlive-core-2013-r1.ebuild 11630 SHA256 6c0f1fd2ab68ca0b5cc1e99852d0c5d0
 EBUILD texlive-core-2013-r3.ebuild 11630 SHA256 d06b546d4796fa5de9774e08b13b5de540d33e2e7af821b9789000b985ce6efd SHA512 d2fabc3516ec006feedaf83be9675512356188aea889cd5fb0ac46727eca96195b4f7bb51fb3bba41097611d7a75f9c2f4a3d98e8314dc3e89cb7d309b9be498 WHIRLPOOL 5b0f6cb203688908a86aff44ae7627f413138e2ba53786dd6f12036d217b3437ea4a601a72b806e934db2a8d42e7b712ec00abccf422d6e81e17c68296c569b7
 EBUILD texlive-core-2014-r1.ebuild 11010 SHA256 f4dc0070805201d7100c7fd02af0866205de96d632a52fc0ead17c6f23ed55b5 SHA512 b6f50f664d6762e269b5cbf563de00ce419d55ba3652618045e1fa611e806f7747ea5b837d74cee156aca85c4b67a43340862227777a490a692b9dd2a5a192cf WHIRLPOOL 17f9a543ce5d0c5f3076ba78eff99e3b1d5d748e1c94d93d0bf9c39807af3589763622b1ef566dde4bf371e33fb9ca3d9e2cf97e06ddbf5fa7b0eabb5b63f9b2
 EBUILD texlive-core-2014-r3.ebuild 10817 SHA256 1262f418e6bfa147b7d2271d1c3786dbb018ff2b1cd57342ab289755dd3981a1 SHA512 ad722442b47cba291235cf63a97080de8d07a3d4d84b195f01ba36a8a85838d2b604350a7a9b8c31822f5cbb9572e6d159f4ae6d8ae8c6046b89c70122501c78 WHIRLPOOL 5616ce5b99c5c52290bdbeac146853d971172a93aad6b9e689077f6a3f06baac291ef8e64e5be908f03e2deae30fc0f1e5e787a5a1374032a67b233d4b10bf04
-EBUILD texlive-core-2014-r4.ebuild 10923 SHA256 abe54778617bdcf6a48a5b32e1c65aacabca5e81aced1e0ed24072bbf5d26319 SHA512 d7bf32821bb1966d485b011a76654fc348f1d19aed37e7e43a82eeae9cba18553e7e1700636cfcf0d55d3580d3a34bd147c3804cdd6f0eec1b008b6f4d25e9c0 WHIRLPOOL 6b9fef99240a9ce14d9717e313f7cb3abf85a2451475cc8813a0388c83385a385757a248b5c6c04111cb75e42b7cf98588b2732267a910514c7845e6a3d9fab6
+EBUILD texlive-core-2014-r4.ebuild 10922 SHA256 c53cfbe1c3c17a8fa97e02afdb4048b6f3ec0f3361110bb16fb4e469d4867592 SHA512 136ca6ee8c58507e0edfc41d1db5fda79abc755a00cb2e1edef5a5f93c37d0bbce80fc7e6ddc11362404eb81f3916b9a96d4477deb9c8373f4ffd570d51ab790 WHIRLPOOL 49b6fb46c681c0756a8428232b1edecaa5557a694cae9552da4a69a94b95a0c193d53ba44c1f47a261e955811a088b4d4410ae7c1738dafa690793c9df044377
 EBUILD texlive-core-2014.ebuild 10961 SHA256 114ee434dfae05bb8ceeb5c3f23ceaa9d8ea75222dfaa1454f3ec47b63db93ba SHA512 f9ec9b36b8d94ca498cfcc97fb2826e601e5defc00e601fdf53f4b07904e18d91435e51e2bd14cadc205bba0f94cd6702f6084f7d32a61627fb24890f152ac0e WHIRLPOOL b287b8db22418fb6b4df2bb508743f8d7901c50f6c36c84ab5e159d4caddf3182f33319c99991fc02fc94326d38cf0d41b3c223323f165030278863b6e71fa90
 EBUILD texlive-core-2015.ebuild 10953 SHA256 1d49991108546417fe14172e9eafa78beb7e6781228729dfd1357575c5b67b75 SHA512 7a20dcdc778070c0ce0cbedcb0ff7687a8de5712fb292dcba20bdbbc50c41edc8d1bf89434436122a7b2b1667ca3a9174c39e2d9170ba80afbde73ee057c9da7 WHIRLPOOL 1a6f1b74573d9d66c840b59c68a0a6d6b267e16f34ce7b8f5691a17be09f2cdc3fe7ecfe4ca53f03b81cce6a46cb3b7ea614c751a3cd6372be42dd110884b0b2
-MISC ChangeLog 36514 SHA256 9deddf93ca7e9958afb5c1a84f244557d7b3b960b66f15e1613b684daadc2d66 SHA512 c05d44bafe5054313c6cb97ffff8db945aabbd040c02178ff0fceb163cb2d38372806c7a45c6c9278df91ac5413d1a040228f22db72b4ffc52aaccb010f79aba WHIRLPOOL 8492fef96f52371e1bd6f91ad38ff2e16d710427931964d0d6ca5a65069828a970a86822fc3f1312a1d6c1a2a5bb3ec4bbae03fe270c3d32f6482f4019a2e1b4
+MISC ChangeLog 36632 SHA256 24f83742315ef9ff4afe0c549db26aec2fc5228f7bd71e785a4bf79a847534f4 SHA512 47c3d5b9b9651bf6fb468a581f3b211076096be9dbef0b661db554573906caa986fe059deb416fb3a802d4183b8b579c667a282b04cbe54883960a3f6ffd68d2 WHIRLPOOL ca3fb51194f4837bde0fae0aa1df4978fc23cffa942669adb0dd07b933322dc65e657ad12ad5ecf649ba0656e827996d10036a8a4202607c2fe301d048834c67
 MISC metadata.xml 460 SHA256 753a65eced4f57be9d1a7bf0b5ec47602b8cae9af975e423adabd6dcaa27d179 SHA512 d0dc8da34ce7d482396d8890359e112d6813ec67bd5f8f3e26f5dac10a5c11ec5c295ab6efed7129a28d5316946e555581d3ba616806ccdb0e020cd2e523ce85 WHIRLPOOL 4f69cdc5d5b8ddea9ec159df7f75cb4c345962176cecc8fefd5761b9f0c209caf447fc131fccaba224cbe9b4faaab2db24bd4cae271e078bf6079bd0def5ef31
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlWn0RcACgkQvFcC4BYPU0ocsQCeJ1Yz9vVZ3UDsSNTRLPnD8Tc2
-nVMAoLKbvt957d97b/qZwI0mUCWi/ie5
-=477O
+iQIcBAEBCAAGBQJVr/NzAAoJEJOE+m71LUu6vrEP/2zvejIWBd2kj8jm/gCVrVCl
+FDG0FligBTjCGxFG/qMXL2WmycZvrUjB001EOz/+I8n/zWQFizxfp/GZnnTdzdJD
+2kQkMAAzXDa0cR5WLfS1P6Zz7Dy6Gzh+euSsDQOxYfGJia8ME7A8Ww0e3ix1EcDp
+Z8ffeTrHLCOIwO+k0qpv6K2OjiPvTtW4bRAWxT8uO99GepG1Hi82bNzYfplfzzVU
+LZv6T9LAygTpIOHG7zAk0e0Br6H7F+E2dWTZUf6MXY+p3br0YbeUP1ximyeGej3g
+5BmoS1ohJHh9IYm50tzMc8k6CUOLr71drAmAmEZ5eRh+40Y86Ckt0rIXvaI8AlNu
+QGont++i5Nwtjhm0TVtrwnfBGxpJqrl0odC/VsI4+iUL7dJR8u84nyyA9o/H32v4
+ov1s7Uq9wHtM0C4iEdOEWMBi186T7rdsY4BPHbtQQkc89QJmlUKoPBXtUyNMflgs
+sANlaK+QkBOYgnB5vWJv97dWtKN7yHFgOIik5LLjUmHzXRgN+ecJTSvifri+38RR
+fsRCfM5k2gYt6Ylv0tBT7cGzRDYNYXhFTaTLpAXQVa2CTfh8ABYYpHWSgTZbBY10
+ZQBAT83CPOKeCmD4E3uhCf4HEjcX+WJ67Btch9Fa2P6o0HysYxoEZGpNtTaiyfEm
+YrboX/4dj4YfI3isEMT9
+=vZcX
 -----END PGP SIGNATURE-----
