@@ -3,14 +3,24 @@ Hash: SHA256
 
 EBUILD texlive-2012.ebuild 9431 SHA256 e87deb7fe9486fe6ddc22771671d051f7b53d219865fc6b5d5101b01f710103d SHA512 602ff921722fafd45bb97f402785be9a74cedd46e6a0e6551463113ec3dcd211a59eeeec8889c54ca93f75887613a2105604429ccd1f752959c368304d8ddf54 WHIRLPOOL eb897ea86a77294d42a5967b6a78ad91fb3dd81536370b73986b4ea2dc8c83513b71032e4337f36aaaef6eecc6176f16f0fffad40b2d24b63cb510944612f68a
 EBUILD texlive-2013.ebuild 7767 SHA256 961b6a4c80c38522d7ed5acad969c0a6d3c59d39d29d3a134899d3f23c10ed87 SHA512 38d5577ee4bf74d97b1ed6b063ebf58bd6e0323cf140dc80effc1883939ba16a609ba7aff7651c4182e4fd5f15774ee0a02c92b5b87470994e879a4b5078caf3 WHIRLPOOL d0c709181419efdd73e4d67b13ddd64773ba40a5ff17d8bd814c3af25786e9c013bd86833a8d427542b8cc449240238dcc83d0e6053e06c54c583e87bbf0649b
-EBUILD texlive-2014.ebuild 7869 SHA256 c91ea0e0f8665212b8de7b7aea6d4f9d0a4f6d4e9da4446db93fd553981fdd4a SHA512 25a7b5b5518bc3a38145642ce2a9180f9491ab61f66aa1c49d36f84a6cc6b4b1de105f6bfc65d5b5cd5d989add4b5aa94a923a66c7c402796c896cbeeee6f74c WHIRLPOOL 9629fa7f92426a680bda6d8b9434a4cf5bd0392f40adc5c02980d54dff1e213603f31c3419b1844d798c14d4a6ffd04427f596a7e2e0ce82ca68797524ab74c5
+EBUILD texlive-2014.ebuild 7869 SHA256 6c0b4d9a0de708b57de68dcef0f56bc09609eda9d84b9ce4aa74d85692ef948f SHA512 371869e2f13186b9fb843569a0ec270f3d9852e830f496382d7c66992739494050ca42a769c4228efc14408f36d2abb66da6f6a0c8593addabcc99e58a63c384 WHIRLPOOL 56d5386dc29a30ae86d61e13a979652aae56f82702d8fa9713247ac8db7b269faf2fbc45278b1a8abc53c845401941d2fdb6141437ea9bdf4956c5b3f1252a69
 EBUILD texlive-2015.ebuild 7888 SHA256 f30e8e29b2c03f8ec49e52b6480cb2f0f2cfafeda2fc2f7f05170d06e94d08d0 SHA512 9b50f3e02b16ef7ec8bc261ba8af1875eef97162a033a1c8dbc3971806e26c5c78786a038cb2980f970d8577c589e5424e36e756ff492da159410f8a80b52bfe WHIRLPOOL 9611c828a0e995e908a5ddfdcfbae1fef70ed37909fa3c70f457fa9da102dd0c98e6d47d85700e35bcf5235052455c9b1660979be67b1ce0a2702bf80b88d660
-MISC ChangeLog 9103 SHA256 d81a2ce07b341cb71a811cd5a846f41105b9534db90561e9fd75540880ffe649 SHA512 bcfbb5491982de3945a34f9cc7c94e8b0a756c857243585050cb8875d22440fdd850991b40dedd310147d618823829ac1e0332bc3159418c7438597dadc217bb WHIRLPOOL e47e2cc7ef3d1dd5f5f7e4a2905a27e743069d780fed2c3a3ccc2fd496c84bd62f6a248862187b6bde32911ec7b203c7c867ff500926f009674a3ad205f043ee
+MISC ChangeLog 9211 SHA256 c4ec8e0d70878f82a6acf4edab7d9f88ef4c79bf4314160533227911a3972072 SHA512 a6d0af25de4390aa5471f679cb67e9376fc5c35dc318c946953cc9fb2bbdd9ddd65a832c84e28b7e6827504b78b18f77e60e281d83615a040e3a628197aa137e WHIRLPOOL 0fecc8f354a242a7caa8c7557dc6597689efef67cb72ec570f1b95204088677870dca007259c8d76a9659800a3f43e3e59111e47ab9efacb5f8f6f4b976d8bf8
 MISC metadata.xml 2575 SHA256 f486dac9dd1059677cd561b7738cf66b81229a15de390e93b6fd0482b3f9d604 SHA512 cddaa11708005698ed30b5fe21b1bb660c570f6223e06f5491cca87ed4833432ab4165994ad3f725fc0ba0658deb76bccfb7588fecad94c15fea8f9181c49391 WHIRLPOOL 05b1a96ae11798c432efdd4927d658ba9a0a08c04ec17efac9411ef44b588ac685f855df9ca92b063a52db83f22b82a634f2638c7e47712c76e60e518b4cde64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlWnz6oACgkQvFcC4BYPU0r3gQCgsncAlUtO75WUQZGphDT9UiPb
-2WYAoKnV0+7GGXMWRsOGPRSmkwxMC0JX
-=pa6j
+iQIcBAEBCAAGBQJVr/MKAAoJEJOE+m71LUu6As0P/0El4o/E0vpOKY3lxTi3sGHr
+zPpX/fSThAXLYyn8yoB5rQj1Tc+BlgmfK6obHRvymcFOYXCbAfDT2Yj3fVoRtvZ6
+xTiM6V9zq65+KSmznBPzTxPFob2tSHkTRPO7lhlkGUEcKm2OLN8lFS40ZbMO7aiE
+LQOFlyNwrQwkSSvxeyHAKABwliR3r5tlKrLborKzmyFt93gRtFN2Jh3bYsW74jeh
+g0pY1ixnCOiCWrVOkhm5cWxIlKyoqaD5OWDteH1OjpVip2U7cw+rsRWq/1+IFq+N
+mNq0Qh7F+3e/ZV4NB7zWcanBEqrAbwseGExpq1OKlR4XP3H5fzIqmWt1R7fHMi0N
+jiROA24GuAT+HA5zbsxqwESkTsSne9oSlQ6VJpprpap6mStrECAQpYIZzJIZ5XRI
+jnnmxDKHguix+oSPxEgkF2AAlicmAV7UupQvG8NunkmmQwXLVpD0pTQWSE1gKTa/
+4IMGii7TM19AxhC0Wc0l0gWOLIvAkGEQIFrHUPmTgOld1jkIH+hF0OYQmEhCEkC4
+jxpBXlvXdaShVlTDSeeefOC6hTkOqHhykEbs8tOdCCMtL4HObeB2QAbXpl4vXnm6
+HIBqdeRkFnf+bY7IfzigSaCPk4jjk471Yr0mbKOxDAj8hihg09sQ4CAEdddn+uAi
+ZGGO2xUpkkcit9tb7zC4
+=ZKYz
 -----END PGP SIGNATURE-----
